Fix for text-alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,6 @@
 body {
   font-family: "Microsoft JhengHei", "微軟正黑體", "Heiti TC", "黑體-繁", sans-serif;
+  text-align: justify;
 }
 
 main {
